--- a/reservations/templates/portal/index.html
+++ b/reservations/templates/portal/index.html
@@ -23,7 +23,7 @@
 
                 <div class="section-heading left half xs-margin-20px-bottom">
                     <div class="title-font">A Story</div>
-                    <h4>We</h4>
+                    <h4>ORRSystem</h4>
                 </div>
 
                 <p class="width-90 xs-width-100">Restaurant food dolor sit amet, consectetur adipisicing elit, sed do eiusmod eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat olore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation Duis aute irure dolor in reprehenderit in voluptate.</p>
