--- a/reservations/templates/portal/reserve.html
+++ b/reservations/templates/portal/reserve.html
@@ -16,7 +16,7 @@
 
                     <div class="section-heading left half xs-text-center xs-margin-30px-bottom">
                         <div class="title-font font-size22 text-theme-color">Reservation</div>
-                        <h4 class="text-white opacity9">Move the table away</h4>
+                        <h4 class="text-white opacity9">Reserve your table now</h4>
                     </div>
 
                     {% include 'partials/_alerts.html' %}
