--- a/reservations/templates/base.html
+++ b/reservations/templates/base.html
@@ -19,11 +19,11 @@
         <!-- start navbar -->
         <nav class="navbar navbar-expand-lg alt-font">
             <div class="container sm-padding-10px-tb sm-padding-15px-lr">
-
+                    <img class="logo active"  href="javascript:void(0);" data-scroll-nav="0"  src="{% static 'img/logo.png' %}">
                 <!-- start logo -->
                 <a class="logo active" href="javascript:void(0);" data-scroll-nav="0">
-                    <img src="{% static 'img/logo-light.png' %}" alt="ORRSystem - Restaurant & Cafe"
-                        title="ORRSystem - Restaurant & Cafe">
+                    <h1 class="title-font " alt="ORRSystem - Restaurant & Cafe"
+                        title="ORRSystem - Restaurant & Cafe">GigCafe</h1>
                 </a>
                 <!-- end Logo -->
 
@@ -37,16 +37,13 @@
                 <div class="navbar-collapse collapse" id="navbarContent" style="">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" href="{% url 'index' %}" >Beginning</a>
+                            <a class="nav-link active" href="{% url 'index' %}" >Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0);" data-scroll-nav="1">We</a>
+                            <a class="nav-link" href="javascript:void(0);" data-scroll-nav="1">ORRSystem</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="javascript:void(0);" data-scroll-nav="2">Menu</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0);" data-scroll-nav="3">The Chef</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="javascript:void(0);" data-scroll-nav="5">The Food</a>
@@ -113,16 +110,13 @@
                     <nav class="side-nav width-100">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link active" href="{% url 'index' %}" >Beginning</a>
+                                <a class="nav-link active" href="{% url 'index' %}" >Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0);" data-scroll-nav="1">We</a>
+                                <a class="nav-link" href="javascript:void(0);" data-scroll-nav="1">ORRSystem</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="javascript:void(0);" data-scroll-nav="2">Menu</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0);" data-scroll-nav="3">The Chef</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="javascript:void(0);" data-scroll-nav="5">The Food</a>
